refactor: SYSPRI-202 - improve exception handling | fix somar issues | refactor